preliminary html complete

--- a/index.html
+++ b/index.html
@@ -38,16 +38,75 @@
         <!-- Hero -->
         <section class="hero">
             <div>
-                <h2 id="hero-text">
+                <h1 id="hero-text">
                     Where We Go One, We Go ALL!
-                </h2>
+                </h1>
             </div>
         </section>
         <!-- End of Hero -->
 
-        <!--  Main Content with Three Rows -->
-        
+        <!--  Main Content Start -->
+        <main class="main">
+            <section id="about-me" class="about-me">
+                <div class="flex-row">
+                    <h2 class="section-title secondary secondary-border">About Me</h2>
+                </div>
+                <div>
+                    <p>
+                        Hello! My name is Faissal Shabani and welcome to my portfolio. I'll assume that my name has you wondering
+                        where I might come from, so I'll assist you with that. I was born in the Democratic Republic of Congo, formlery Zaire,
+                        and I came to the states as a refugee due to the Genocide of '94 and the First and Second Congo wars.
+                    <br />
+                        My name comes from a king in Saudia Arabia who built and named the hospital that I was born in. Coincidentally, 
+                        the name means "the stubborn one"; yes, I am extremely stubborn. Now, my love for technology mixed with a ferocious 
+                        sense of sturbbornes has lead me to fall in love with programming. Programming allows me to direct my stubborness and 
+                        persuit of perfection into a meaningful cause. Please allow this portfolio to illustrate some of my work and the passion 
+                        that I have for development. Cheers!
+                    </p>
+                </div>
+            </section>
+            <!-- About Me Section End -->
 
+            <!-- Work Section -->
+            <section id="work" class="work">
+                <div class="flex-row">
+                    <h2 class="section-title secondary-border">Work</h2>
+                </div>
 
+                <div class="work-container">
+                    <div>
+                        <h3 class="work-name">Run Buddy</h3>
+                    </div>
+                    <div>
+                        <h3 class="work-name">Horiseon Refactor</h3>
+                    </div>
+                    <div>
+                        <h3 class="work-name">Robot Buddy</h3>
+                    </div>
+                </div>
+            </section>
+            <!-- End of Work Section -->
+
+            <!-- Contact Me Section -->
+            <section id="contact-me" class="contact">
+                <div class="flex-row">
+                    <h2 class="section-title secondary-border">Contact Me</h2>
+                </div>
+                <div class="contact-info">
+                    <address>
+                        P: (210) PRO-GRAM <br/>
+                        E: <a href="mailto:business.faissal@outlook.com">business.faissal@outlook.com</a>
+                        G: <a href="GitHub">https://github.com/Jiryeah</a>
+                    </address>
+                </div>
+            </section>
+            <!-- Contact Me Section End -->
+        </main>
+        <!-- Main Sectino End-->
+        <!-- Footer Start -->
+        <footer>
+            <h2>WWG1WGA!</h2>
+        </footer>
+        <!-- Footer End -->
     </body>
 </html>
