header and nav modifications

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <!-- Hero -->
         <section class="hero">
             <div>
-                <h1 id="hero-text">
-                    Where We Go One, We Go ALL!
+                <h1>
+                    Premidated Precision
                 </h1>
             </div>
         </section>
@@ -49,9 +49,9 @@
         <main class="main">
             <section id="about-me" class="about-me">
                 <div class="flex-row">
-                    <h2 class="section-title secondary secondary-border">About Me</h2>
+                    <h2 class="section-title primary-border">About Me</h2>
                 </div>
-                <div>
+                <div class="about-me-text">
                     <p>
                         Hello! My name is Faissal Shabani and welcome to my portfolio. I'll assume that my name has you wondering
                         where I might come from, so I'll assist you with that. I was born in the Democratic Republic of Congo, formlery Zaire,
@@ -70,18 +70,21 @@
             <!-- Work Section -->
             <section id="work" class="work">
                 <div class="flex-row">
-                    <h2 class="section-title secondary-border">Work</h2>
+                    <h2 class="section-title primary-border">Work</h2>
                 </div>
 
-                <div class="work-container">
+                <div class="work-container secondary-border">
                     <div>
                         <h3 class="work-name">Run Buddy</h3>
+                        <img src="./assets/images/Run-Buddy Screenshot.png" alt="sreenshot of the Run-Buddy web build" />
                     </div>
                     <div>
                         <h3 class="work-name">Horiseon Refactor</h3>
+                        <img src="./assets/images/Horiseon Refactor Screen Shot.png" alt="screenshot of the Horiseon web build" />
                     </div>
                     <div>
                         <h3 class="work-name">Robot Buddy</h3>
+                        <img src="./assets/images/Robot Gladiators .jpeg" alt="Photo of robot gladiators." />
                     </div>
                 </div>
             </section>
@@ -90,13 +93,13 @@
             <!-- Contact Me Section -->
             <section id="contact-me" class="contact">
                 <div class="flex-row">
-                    <h2 class="section-title secondary-border">Contact Me</h2>
+                    <h2 class="section-title primary-border">Contact Me</h2>
                 </div>
-                <div class="contact-info">
+                <div class="contact-info secondary-border">
                     <address>
                         P: (210) PRO-GRAM <br/>
-                        E: <a href="mailto:business.faissal@outlook.com">business.faissal@outlook.com</a>
-                        G: <a href="GitHub">https://github.com/Jiryeah</a>
+                        E: <a href="mailto:business.faissal@outlook.com">business.faissal@outlook.com</a> <br />
+                        G: <a href="GitHub">https://github.com/Jiryeah</a> <br />
                     </address>
                 </div>
             </section>
