about me section

--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial scale=1.0" />
         <link rel="stylesheet" href="./assets/css/style.css" />
         <title>Jiryeah's History</title>
     </head>
-
+    <!-- Body of the Web Application -->
     <body>
         <!-- Navigation -->
         <header>
@@ -36,76 +34,70 @@
         <!-- End of Navigation -->
 
         <!-- Hero -->
-        <section class="hero">
-            <div>
-                <h1>
-                    Premidated Precision
-                </h1>
-            </div>
-        </section>
+        <section class="hero"></section>
         <!-- End of Hero -->
 
-        <!--  Main Content Start -->
-        <main class="main">
-            <section id="about-me" class="about-me">
-                <div class="flex-row">
-                    <h2 class="section-title primary-border">About Me</h2>
-                </div>
-                <div class="about-me-text">
-                    <p>
-                        Hello! My name is Faissal Shabani and welcome to my portfolio. I'll assume that my name has you wondering
-                        where I might come from, so I'll assist you with that. I was born in the Democratic Republic of Congo, formlery Zaire,
-                        and I came to the states as a refugee due to the Genocide of '94 and the First and Second Congo wars.
-                    <br />
-                        My name comes from a king in Saudia Arabia who built and named the hospital that I was born in. Coincidentally, 
-                        the name means "the stubborn one"; yes, I am extremely stubborn. Now, my love for technology mixed with a ferocious 
-                        sense of sturbbornes has lead me to fall in love with programming. Programming allows me to direct my stubborness and 
-                        persuit of perfection into a meaningful cause. Please allow this portfolio to illustrate some of my work and the passion 
-                        that I have for development. Cheers!
-                    </p>
-                </div>
-            </section>
-            <!-- About Me Section End -->
+        <!--  About Me Section Start -->
+        <section id="about-me" class="about-me">
+            <div class="flex-row">
+                <h2 class="section-title">About Me</h2>
+            </div>
+            <div class="about-me-text">
+                <p>
+                    Hello! My name is Faissal Shabani and welcome to my portfolio. I'll assume that my name has you wondering
+                    where I might come from, so I'll assist you with that. I was born in the Democratic Republic of Congo, formlery Zaire,
+                    and I came to the states as a refugee due to the Genocide of '94 and the First and Second Congo wars.
+                </p>
+                <br/>
+                <p>
+                    My name comes from a king in Saudia Arabia who built and named the hospital that I was born in. Coincidentally, 
+                    the name means "the stubborn one"; yes, I am extremely stubborn. Now, my love for technology mixed with a ferocious 
+                    sense of sturbbornes has lead me to fall in love with programming. Programming allows me to direct my stubborness and 
+                    persuit of perfection into a meaningful cause. Please allow this portfolio to illustrate some of my work and the passion 
+                    that I have for development. Cheers!
+                </p>
+            </div>
+        </section>
+        <!-- About Me Section End -->
 
-            <!-- Work Section -->
-            <section id="work" class="work">
-                <div class="flex-row">
-                    <h2 class="section-title primary-border">Work</h2>
-                </div>
+        <!-- Work Section -->
+        <section id="work" class="work">
+            <div class="flex-row">
+                <h2 class="section-title">Work</h2>
+            </div>
 
-                <div class="work-container secondary-border">
-                    <div>
-                        <h3 class="work-name">Run Buddy</h3>
-                        <img src="./assets/images/Run-Buddy Screenshot.png" alt="sreenshot of the Run-Buddy web build" />
-                    </div>
-                    <div>
-                        <h3 class="work-name">Horiseon Refactor</h3>
-                        <img src="./assets/images/Horiseon Refactor Screen Shot.png" alt="screenshot of the Horiseon web build" />
-                    </div>
-                    <div>
-                        <h3 class="work-name">Robot Buddy</h3>
-                        <img src="./assets/images/Robot Gladiators .jpeg" alt="Photo of robot gladiators." />
-                    </div>
+            <div class="work-container secondary-border">
+                <div>
+                    <h3 class="work-name">Run Buddy</h3>
+                    <img class="rb"></img>
                 </div>
-            </section>
-            <!-- End of Work Section -->
+                <div>
+                    <h3 class="work-name">Horiseon Refactor</h3>
+                    <img class="hr"></imig>
+                </div>
+                <div>
+                    <h3 class="work-name">Robot Gladiators</h3>
+                    <img class="rg"></img>
+                </div>
+            </div>
+        </section>
+        <!-- End of Work Section -->
 
-            <!-- Contact Me Section -->
-            <section id="contact-me" class="contact">
-                <div class="flex-row">
-                    <h2 class="section-title primary-border">Contact Me</h2>
-                </div>
-                <div class="contact-info secondary-border">
-                    <address>
-                        P: (210) PRO-GRAM <br/>
-                        E: <a href="mailto:business.faissal@outlook.com">business.faissal@outlook.com</a> <br />
-                        G: <a href="GitHub">https://github.com/Jiryeah</a> <br />
-                    </address>
-                </div>
-            </section>
-            <!-- Contact Me Section End -->
-        </main>
-        <!-- Main Sectino End-->
+        <!-- Contact Me Section -->
+        <section id="contact-me" class="contact">
+            <div class="flex-row">
+                <h2 class="section-title">Contact Me</h2>
+            </div>
+            <div class="contact-info secondary-border">
+                <address>
+                    P: (210) PRO-GRAM <br/>
+                    E: <a href="mailto:business.faissal@outlook.com">business.faissal@outlook.com</a> <br />
+                    G: <a href="GitHub">https://github.com/Jiryeah</a> <br />
+                </address>
+            </div>
+        </section>
+        <!-- Contact Me Section End-->
+
         <!-- Footer Start -->
         <footer>
             <h4>WWG1WGA!</h4>
