--- a/index.html
+++ b/index.html
@@ -1,107 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="./assets/css/style.css" />
-        <title>Jiryeah's History</title>
-    </head>
-    <!-- Body of the Web Application -->
-    <body>
-        <!-- Navigation -->
-        <header>
-            <h1>
-                <a href="/">FAISSAL SHABANI</a>
-            </h1>
-            <nav>
-                <!-- Unordered Lis Element -->
-                <ul>
-                    <!-- List Item Element -->
-                    <li>
-                        <!-- Anchor Element for About Me -->
-                        <a href="#about-me">About Me</a>
-                    </li>
-                    <!-- Anchor Element for Work -->
-                    <li>
-                        <a href="#work">Work</a>
-                    </li>
-                    <!-- Anchor Element for Contact Me -->
-                    <li>
-                        <a href="#contact-me">Contact Me</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <!-- End of Navigation -->
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Jiryeah's History</title>
+  </head>
+  <!-- Body of the Web Application -->
+  <body>
+    <header class="hero">
+      <h1>
+        <a href="/">FAISSAL SHABANI</a>
+      </h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="#about-me">About Me</a>
+          </li>
+          <li>
+            <a href="#work">Work</a>
+          </li>
+          <li>
+            <a href="#contact-me">Contact Me</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    
+    <!--  About Me Section Start -->
+    <main>
+      <section class="about-me">
+        <div class="flex-row">
+          <h2 class="section-title">About Me</h2>
+        </div>
+        <div class="about-me-text">
+          <p>
+            Hello! My name is Faissal Shabani and welcome to my portfolio. I'll assume that my name has you wondering
+            where I might come from, so I'll assist you with that. I was born in the Democratic Republic of Congo, formlery Zaire,
+            and I came to the states as a refugee due to the Genocide of '94 and the First and Second Congo wars.
+          </p>
+          <br/>
+          <p>
+            My name comes from a king in Saudia Arabia who built and named the hospital that I was born in. Coincidentally, 
+            the name means "the stubborn one"; yes, I am extremely stubborn. Now, my love for technology mixed with a ferocious 
+            sense of sturbbornes has lead me to fall in love with programming. Programming allows me to create and use my 
+            persuit of perfection for a meaningful cause. Please allow this portfolio to illustrate some of my work and the passion 
+            that I have for development. Cheers!
+          </p>
+        </div>
+      </section>
+      <!-- About Me Section End -->
+      <!-- Work Section -->
+      <section class="work">
+        <div class="flex-row">
+          <h2 class="section-title">Work</h2>
+        </div>
+        <div class="work-container secondary-border">
+          <div>
+            <a href="" target="_blank" class="work-link">
+              <h3 class="work-name">Run Buddy</h3>
+              <img class="rb"></img>
+            </a>
+          </div>
+          <div>
+            <a href="" target="_blank" class="work-link">
+            <h3 class="work-name">Horiseon Refactor</h3>
+            <img class="hr"></imig>
+            </a>
+          </div>
+          <div>
+            <a href="" target="_blank" class="work-link">
+            <h3 class="work-name">Robot Gladiators</h3>
+            <img class="rg" src=""></img>
+            </a>
+          </div>
+        </div>
+      </section>
+      <!-- End of Work Section -->
+      <!-- Contact Me Section -->
+      <section class="contact">
+        <div class="flex-row">
+          <h2 class="section-title">Contact Me</h2>
+        </div>
+        <div class="contact-info secondary-border">
+          <address>
+            P: (210) PRO-GRAM <br/>
+            E: <a href="mailto:business.faissal@outlook.com">business.faissal@outlook.com</a> <br />
+            G: <a href="GitHub">https://github.com/Jiryeah</a> <br />
+          </address>
+        </div>
+      </section>
+    </main>
+    <!-- Contact Me Section End-->
 
-        <!-- Hero -->
-        <section class="hero"></section>
-        <!-- End of Hero -->
-
-        <!--  About Me Section Start -->
-        <section id="about-me" class="about-me">
-            <div class="flex-row">
-                <h2 class="section-title">About Me</h2>
-            </div>
-            <div class="about-me-text">
-                <p>
-                    Hello! My name is Faissal Shabani and welcome to my portfolio. I'll assume that my name has you wondering
-                    where I might come from, so I'll assist you with that. I was born in the Democratic Republic of Congo, formlery Zaire,
-                    and I came to the states as a refugee due to the Genocide of '94 and the First and Second Congo wars.
-                </p>
-                <br/>
-                <p>
-                    My name comes from a king in Saudia Arabia who built and named the hospital that I was born in. Coincidentally, 
-                    the name means "the stubborn one"; yes, I am extremely stubborn. Now, my love for technology mixed with a ferocious 
-                    sense of sturbbornes has lead me to fall in love with programming. Programming allows me to direct my stubborness and 
-                    persuit of perfection into a meaningful cause. Please allow this portfolio to illustrate some of my work and the passion 
-                    that I have for development. Cheers!
-                </p>
-            </div>
-        </section>
-        <!-- About Me Section End -->
-
-        <!-- Work Section -->
-        <section id="work" class="work">
-            <div class="flex-row">
-                <h2 class="section-title">Work</h2>
-            </div>
-
-            <div class="work-container secondary-border">
-                <div>
-                    <h3 class="work-name">Run Buddy</h3>
-                    <img class="rb"></img>
-                </div>
-                <div>
-                    <h3 class="work-name">Horiseon Refactor</h3>
-                    <img class="hr"></imig>
-                </div>
-                <div>
-                    <h3 class="work-name">Robot Gladiators</h3>
-                    <img class="rg"></img>
-                </div>
-            </div>
-        </section>
-        <!-- End of Work Section -->
-
-        <!-- Contact Me Section -->
-        <section id="contact-me" class="contact">
-            <div class="flex-row">
-                <h2 class="section-title">Contact Me</h2>
-            </div>
-            <div class="contact-info secondary-border">
-                <address>
-                    P: (210) PRO-GRAM <br/>
-                    E: <a href="mailto:business.faissal@outlook.com">business.faissal@outlook.com</a> <br />
-                    G: <a href="GitHub">https://github.com/Jiryeah</a> <br />
-                </address>
-            </div>
-        </section>
-        <!-- Contact Me Section End-->
-
-        <!-- Footer Start -->
-        <footer>
-            <h4>WWG1WGA!</h4>
-        </footer>
-        <!-- Footer End -->
-    </body>
+    <!-- Footer Start -->
+    <footer>
+        <h4>WWG1WGA!</h4>
+    </footer>
+    <!-- Footer End -->
+  </body>
 </html>
