minor changes to html

--- a/index.html
+++ b/index.html
@@ -59,19 +59,25 @@
           <div>
             <a href="" target="_blank" class="work-link">
               <h3 class="work-name">Run Buddy</h3>
-              <img class="rb"></img>
+              <img id="run-buddy" />
             </a>
           </div>
           <div>
             <a href="" target="_blank" class="work-link">
-            <h3 class="work-name">Horiseon Refactor</h3>
-            <img class="hr"></imig>
+              <h3 class="work-name">Horiseon Refactor</h3>
+              <img id="horiseon-refactor" />
             </a>
           </div>
           <div>
             <a href="" target="_blank" class="work-link">
-            <h3 class="work-name">Robot Gladiators</h3>
-            <img class="rg" src=""></img>
+              <h3 class="work-name">Robot Gladiators</h3>
+              <img id="robot-gladiators" src="" />
+            </a>
+          </div>
+          <div>
+            <a href="" target="_blank" class="work-link">
+              <h3 class="work-name">Project 1</h3>
+              <img id="project-team" src="" />
             </a>
           </div>
         </div>
