removed old images, added new images, modified classes and id's

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     </header>
     
     <!--  About Me Section Start -->
-    <main>
+    <main class="content">
       <section class="about-me">
-        <div class="flex-row">
-          <h2 class="section-title">About Me</h2>
+        <div class="section-title">
+          <h2>About Me</h2>
         </div>
         <div class="about-me-text">
           <p>
@@ -52,32 +52,32 @@
       <!-- About Me Section End -->
       <!-- Work Section -->
       <section class="work">
-        <div class="flex-row">
-          <h2 class="section-title">Work</h2>
+        <div class="section-title">
+          <h2>Work</h2>
         </div>
         <div class="work-container secondary-border">
-          <div>
-            <a href="" target="_blank" class="work-link">
+          <div class="minor-work">
+            <a href="https://jiryeah.github.io/run-buddy/" target="_blank">
               <h3 class="work-name">Run Buddy</h3>
-              <img id="run-buddy" />
+              <img class="screenshot" id="run-buddy" src="./assets/images/Run Buddy.png" alt="screenshot of working Run Buddy website" />
             </a>
           </div>
-          <div>
-            <a href="" target="_blank" class="work-link">
+          <div class="minor-work">
+            <a href="https://jiryeah.github.io/Horiseontal-Rifaktor/" target="_blank">
               <h3 class="work-name">Horiseon Refactor</h3>
-              <img id="horiseon-refactor" />
+              <img class="screenshot" id="horiseon-refactor" src="./assets/images/Horiseon.png" alt="screenshot of working Horiseon webiste" />
             </a>
           </div>
-          <div>
-            <a href="" target="_blank" class="work-link">
+          <div class="minor-work">
+            <a href="https://jiryeah.github.io/robot-gladiators/" target="_blank">
               <h3 class="work-name">Robot Gladiators</h3>
-              <img id="robot-gladiators" src="" />
+              <img class="screenshot" id="robot-gladiators" src="./assets/images/Robot-Gladiators.png" alt="screenshot of working Robot Gladiators MVP" />
             </a>
           </div>
-          <div>
-            <a href="" target="_blank" class="work-link">
+          <div class="featured-work">
+            <a href="https://jennyk1989.github.io/project-team/" target="_blank">
               <h3 class="work-name">Project 1</h3>
-              <img id="project-team" src="" />
+              <img class="screenshot" id="project-team" src="./assets/images/Project 1 .png" alt="screenshot of working Weather/Air Quality website" />
             </a>
           </div>
         </div>
@@ -85,7 +85,7 @@
       <!-- End of Work Section -->
       <!-- Contact Me Section -->
       <section class="contact">
-        <div class="flex-row">
+        <div>
           <h2 class="section-title">Contact Me</h2>
         </div>
         <div class="contact-info secondary-border">
@@ -100,7 +100,7 @@
     <!-- Contact Me Section End-->
     <!-- Footer Start -->
     <footer>
-        <h4>WWG1WGA!</h4>
+        <h4>Inspired by: Curiosity and the Cat</h4>
     </footer>
     <!-- Footer End -->
   </body>
