--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <!-- Body of the Web Application -->
   <body>
     <header class="hero">
-      <h1>
-        <a href="/">FAISSAL SHABANI</a>
-      </h1>
-      <nav>
+      <div class="name">
+        <h1>
+          <a href="/">FAISSAL SHABANI</a>
+        </h1>
+      </div>
+      <nav class="nav">
         <ul>
           <li>
             <a href="#about-me">About Me</a>
@@ -56,6 +58,12 @@
           <h2>Work</h2>
         </div>
         <div class="work-container secondary-border">
+          <div class="featured-work">
+            <a href="https://jennyk1989.github.io/project-team/" target="_blank">
+              <h3 class="work-name">Project 1</h3>
+              <img class="screenshot" id="project-team" src="./assets/images/Project 1 .png" alt="screenshot of working Weather/Air Quality website" />
+            </a>
+          </div>
           <div class="minor-work">
             <a href="https://jiryeah.github.io/run-buddy/" target="_blank">
               <h3 class="work-name">Run Buddy</h3>
@@ -74,19 +82,13 @@
               <img class="screenshot" id="robot-gladiators" src="./assets/images/Robot-Gladiators.png" alt="screenshot of working Robot Gladiators MVP" />
             </a>
           </div>
-          <div class="featured-work">
-            <a href="https://jennyk1989.github.io/project-team/" target="_blank">
-              <h3 class="work-name">Project 1</h3>
-              <img class="screenshot" id="project-team" src="./assets/images/Project 1 .png" alt="screenshot of working Weather/Air Quality website" />
-            </a>
-          </div>
         </div>
       </section>
       <!-- End of Work Section -->
       <!-- Contact Me Section -->
-      <section class="contact">
+      <section class="contact section-title">
         <div>
-          <h2 class="section-title">Contact Me</h2>
+          <h2>Contact Me</h2>
         </div>
         <div class="contact-info secondary-border">
           <address>
