modified css and html id's

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="hero">
       <div class="name">
         <h1>
-          <a href="/">FAISSAL SHABANI</a>
+          <a href="/">Faissal Shabani</a>
         </h1>
       </div>
       <nav class="nav">
@@ -31,11 +31,11 @@
     
     <!--  About Me Section Start -->
     <main class="content">
-      <section class="about-me">
+      <section id="about-me">
         <div class="section-title">
           <h2>About Me</h2>
         </div>
-        <div class="about-me-text">
+        <div id="about-me-text">
           <p>
             Hello! My name is Faissal Shabani and welcome to my portfolio. I'll assume that my name has you wondering
             where I might come from, so I'll assist you with that. I was born in the Democratic Republic of Congo, formlery Zaire,
@@ -53,7 +53,7 @@
       </section>
       <!-- About Me Section End -->
       <!-- Work Section -->
-      <section class="work">
+      <section id="work">
         <div class="section-title">
           <h2>Work</h2>
         </div>
@@ -86,8 +86,8 @@
       </section>
       <!-- End of Work Section -->
       <!-- Contact Me Section -->
-      <section class="contact section-title">
-        <div>
+      <section id="contact-me">
+        <div class="section-title">
           <h2>Contact Me</h2>
         </div>
         <div class="contact-info secondary-border">
