--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="section-title">
           <h2>Work</h2>
         </div>
-        <div class="work-container secondary-border">
+        <div class="work-container">
           <div class="featured-work">
             <a href="https://jennyk1989.github.io/project-team/" target="_blank">
               <h3 class="work-name">Project 1</h3>
@@ -89,8 +89,6 @@
       <section id="contact-me">
         <div class="section-title">
           <h2>Contact Me</h2>
-        </div>
-        <div class="contact-info secondary-border">
           <address>
             P: (210) PRO-GRAM <br/>
             E: <a href="mailto:business.faissal@outlook.com">business.faissal@outlook.com</a> <br />
@@ -102,7 +100,7 @@
     <!-- Contact Me Section End-->
     <!-- Footer Start -->
     <footer>
-        <h4>Inspired by: Curiosity and the Cat</h4>
+        <h4>First of Many</h4>
     </footer>
     <!-- Footer End -->
   </body>
