began adding carousel

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Staatliches&family=Teko:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/flickity.css" media="screen">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Jiryeah's History</title>
   </head>
   <!-- Body of the Web Application -->
@@ -62,32 +63,32 @@
       <!-- About Me Section End -->
       <!-- Work Section -->
       <section id="work">
-        <div class="section-title flex-row">
-          <h2 class="section-title">Work</h2>
+        <div>
+          <h2>Work</h2>
         </div>
-        <article class="work-container flex-row">
-          <div class="featured-work">
+        <article class="main-gallery">
+          <div class="gallery-cell">
             <a href="https://jennyk1989.github.io/project-team/" target="_blank">
               <h3 class="work-name">Project 1</h3>
-              <img class="screenshot" id="project-team" src="./assets/images/Project 1 .png" alt="screenshot of working Weather/Air Quality website" />
+              <img src="./assets/images/Project 1- v2.png" alt="screenshot of working Weather/Air Quality website" />
             </a>
           </div>
-          <div class="minor-work">
+          <div class="gallery-cell">
             <a href="https://jiryeah.github.io/run-buddy/" target="_blank">
               <h3 class="work-name">Run Buddy</h3>
-              <img class="screenshot" id="run-buddy" src="./assets/images/Run Buddy.png" alt="screenshot of working Run Buddy website" />
+              <img src="./assets/images/Run Buddy-v2.png" alt="screenshot of working Run Buddy website" />
             </a>
           </div>
-          <div class="minor-work">
+          <div class="gallery-cell">
             <a href="https://jiryeah.github.io/Horiseontal-Rifaktor/" target="_blank">
               <h3 class="work-name">Horiseon Refactor</h3>
-              <img class="screenshot" id="horiseon-refactor" src="./assets/images/Horiseon.png" alt="screenshot of working Horiseon webiste" />
+              <img src="./assets/images/Horiseon-v2.png" alt="screenshot of working Horiseon webiste" />
             </a>
           </div>
-          <div class="minor-work">
+          <div class="gallery-cell">
             <a href="https://jiryeah.github.io/robot-gladiators/" target="_blank">
               <h3 class="work-name">Robot Gladiators</h3>
-              <img class="screenshot" id="robot-gladiators" src="./assets/images/Robot-Gladiators.png" alt="screenshot of working Robot Gladiators MVP" />
+              <img src="./assets/images/Robot-Gladiators-v2.png" alt="screenshot of working Robot Gladiators MVP" />
             </a>
           </div>
         </article>
@@ -95,7 +96,7 @@
       <!-- End of Work Section -->
       <!-- Contact Me Section -->
       <section id="contact-me">
-        <div class="section-title flex-row">
+        <div>
           <h2>Contact Me</h2>
           <address>
             P: (210) PRO-GRAM <br/>
@@ -111,5 +112,7 @@
         <h4>First of Many</h4>
     </footer>
     <!-- Footer End -->
+    <script src="./assets/js/carousel.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
