--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
             </a>
           </div>
           <div class="gallery-cell">
+            <a href="https://mighty-reef-11767.herokuapp.com/" target="_blank">
+              <h3 class="work-name">Project 2</h3>
+              <img src="./assets/images/Project 2.png" alt="screenshot of working Quality Assurance App" />
+            </a>
+          </div>
+          <div class="gallery-cell">
             <a href="https://jiryeah.github.io/run-buddy/" target="_blank">
               <h3 class="work-name">Run Buddy</h3>
               <img src="./assets/images/Run Buddy-v2.png" alt="screenshot of working Run Buddy website" />
